[package]
name = "rrgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "A microframework for declarative code generation and injection"
authors = ["Dotan Nahum <dotan@rng0.io>"]
documentation = "https://docs.rs/rrgen"
repository = "https://github.com/jondot/rrgen"
keywords = ["codegen", "template"]
license = "Apache-2.0"
readme = "../README.md"

[dependencies]

tera = "1"
heck = "*"
gray_matter = "*"
thiserror = "*"
serde_json = "*"
serde = "*"
regex = "*"
serde_regex = "*"
fs-err = "*"

[dev-dependencies]
insta = "*"
fs_extra = "*"
dir-diff = "*"
