[package]
name = "rrgen"
version = "0.5.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "A microframework for declarative code generation and injection"
authors = ["Dotan Nahum <dotan@rng0.io>"]
documentation = "https://docs.rs/rrgen"
repository = "https://github.com/jondot/rrgen"
keywords = ["codegen", "template"]
license = "Apache-2.0"
readme = "../README.md"

[features]
default = ["tera"]
tera = ["dep:tera"]
minijinja = ["dep:minijinja"]

[dependencies]
tera = { version = "1", optional = true }
heck = "0.5"
cruet = "0.14"
thiserror = "2"
serde_json = "1"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
regex = "1"
serde_regex = "1.1"
fs-err = "3.0"
glob = "0.3"
minijinja = { version = "2.5", features = ["default", "loop_controls","loader"], optional = true }

[dev-dependencies]
insta = "1"
fs_extra = "1.3.0"
dir-diff = "0.3.3"
tree-fs = "0.2.1"
