[package]
name = "rrgen"
version = "0.5.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "A microframework for declarative code generation and injection"
authors = ["Dotan Nahum <dotan@rng0.io>"]
documentation = "https://docs.rs/rrgen"
repository = "https://github.com/jondot/rrgen"
keywords = ["codegen", "template"]
license = "Apache-2.0"
readme = "../README.md"

[dependencies]

tera = "1"
heck = "0.4.1"
cruet = "0.13.3"
thiserror = "1"
serde_json = "1"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
regex = "1"
serde_regex = "1.1.0"
fs-err = "2.10.0"
glob = "0.3.1"

[dev-dependencies]
insta = "1"
fs_extra = "1.3.0"
dir-diff = "0.3.2"
tree-fs = "0.2.1"
